--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -181,6 +181,39 @@
 <body>
   <!-- you have to put your config page in a div with id adapter-container -->
   <div class="m adapter-container">
+
+
+    <div class="row">
+      <div class="input-field col s12 m4 l4">
+        <select id="holiday" class="value">
+          <option value="BW">Baden-Würtemberg</option>
+          <option value="BY">Bayern</option>
+          <option value="BE">Berlin</option>
+          <option value="BB">Brandenburg</option>
+          <option value="HB">Bremen</option>
+          <option value="HH">Hamburg</option>
+          <option value="HE">Hessen</option>
+          <option value="MV">Mecklenburg-vorpommern</option>
+          <option value="NI">Niedersachsen</option>
+          <option value="NW">Nordrhein-Westfalen</option>
+          <option value="RP">Rheinland-Pfalz</option>
+          <option value="SL">Saarland</option>
+          <option value="SN">Sachsen</option>
+          <option value="ST">Sachsen-Anhalt</option>
+          <option value="SH">Schleswig-Holstein</option>
+          <option value="TH">Thüringen</option>
+        </select>
+        <label class="translate" for="holiday">holiday</label>
+      </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field col s12">
+          <input class="value" id="simulation" type="checkbox" />
+          <label for="simulation" class="translate">simulation</label>
+        </div>
+      </div>
+
     <!--
     <div class="row">
 
