--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -182,6 +182,8 @@
   <!-- you have to put your config page in a div with id adapter-container -->
   <div class="m adapter-container">
 
+    <div class="row">
+    </div>
 
     <div class="row">
       <div class="input-field col s12 m4 l4">
@@ -208,11 +210,11 @@
     </div>
 
     <div class="row">
-        <div class="input-field col s12">
-          <input class="value" id="simulation" type="checkbox" />
-          <label for="simulation" class="translate">simulation</label>
-        </div>
+      <div class="input-field col s12">
+        <input class="value" id="simulation" type="checkbox" />
+        <label for="simulation" class="translate">simulation</label>
       </div>
+    </div>
 
     <!--
     <div class="row">
