--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -216,6 +216,13 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="input-field col s12">
+        <input class="value" id="executeset" type="checkbox" />
+        <label for="executeset" class="translate">Execution Set</label>
+      </div>
+    </div>
+
     <!--
     <div class="row">
 
